--- a/package.json
+++ b/package.json
@@ -19,17 +19,30 @@
   "dependencies": {
     "@dfinity/agent": "^0.19.3",
     "@dfinity/candid": "^0.19.3",
-    "@dfinity/principal": "^0.19.3"
+    "@dfinity/principal": "^0.19.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-loader": "^9.5.0"
   },
   "devDependencies": {
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "dotenv": "^16.0.3",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
+    "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.3",
     "util": "0.12.4",
     "webpack": "^5.73.0",
